--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,10 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cn.ucai.fulicenter.MainActivity">
-
-    <Button
+    tools:context="cn.ucai.fulicenter.Main2Activity">
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"/>
+        android:layout_height="match_parent"
+        android:text="Main2Activity"/>
 </RelativeLayout>
