--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,6 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:text="跳转到另一Activity"/>
 </RelativeLayout>
