--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,14 +76,14 @@
                     android:orientation="vertical" >
                     <TextView
                         android:id="@+id/tvCartHint"
-                        android:layout_width="20dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:background="@drawable/cart_hint"
                         android:layout_marginLeft="15dp"
                         android:gravity="center"
                         android:padding="2dp"
                         android:paddingLeft="50dp"
-                        android:text="22"
+                        android:text="222"
                         android:textColor="#fff"
                         android:textSize="12dp"
                         android:visibility="visible" />
