--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,99 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cn.ucai.fulicenter.MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <View
+        android:id="@+id/vline"
+        android:layout_above="@+id/mainMenu"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#f36f"/>
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="MainActivity"/>
+        android:layout_above="@+id/vline"
+        android:layout_marginBottom="1dp"/>
+    <LinearLayout
+        android:id="@+id/mainMenu"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <RadioButton
+                android:id="@+id/rbNewGoods"
+                style="@style/menu_item_style"
+                android:text="新品"
+                android:button="@null"
+                android:checked="true"
+                android:textColor="@color/main_botton_text_color"
+                android:drawableTop="@drawable/selector_menu_item_new_good"/>
+            <RadioButton
+                android:id="@+id/rbBoutique"
+                style="@style/menu_item_style"
+                android:text="精品"
+                android:button="@null"
+                android:textColor="@color/main_botton_text_color"
+                android:checked="false"
+                android:drawableTop="@drawable/selector_menu_item_boutique"/>
+            <RadioButton
+                android:id="@+id/rbCategory"
+                style="@style/menu_item_style"
+                android:text="分类"
+                android:textColor="@color/main_botton_text_color"
+                android:checked="false"
+                android:button="@null"
+                android:drawableTop="@drawable/selector_menu_item_category"/>
+            <RelativeLayout
+                style="@style/style_menu_item">
+                <RadioButton
+                    android:id="@+id/rbCart"
+                    style="@style/menu_item_style_cart"
+                    android:text="购物车"
+                    android:textColor="@color/main_botton_text_color"
+                    android:button="@null"
+                    android:checked="false"
+                    android:drawableTop="@drawable/selector_menu_item_cart"/>
+                <LinearLayout
+                    android:id="@+id/shopping_cart_num_bg"
+                    android:layout_width="55dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentTop="true"
+                    android:gravity="center"
+                    android:orientation="vertical" >
+                    <TextView
+                        android:id="@+id/tvCartHint"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/cart_hint"
+                        android:layout_marginLeft="15dp"
+                        android:gravity="center"
+                        android:padding="2dp"
+                        android:paddingLeft="50dp"
+                        android:text="22"
+                        android:textColor="#fff"
+                        android:textSize="12dp"
+                        android:visibility="visible" />
+                </LinearLayout>
+            </RelativeLayout>
+            <RadioButton
+                android:id="@+id/rbPersonalCenter"
+                style="@style/menu_item_style"
+                android:text="个人中心"
+                android:textColor="@color/main_botton_text_color"
+                android:button="@null"
+                android:drawableTop="@drawable/selector_menu_item_personal_center"/>
+        </RadioGroup>
+    </LinearLayout>
 </RelativeLayout>
+
