--- a/app/src/main/res/layout/fragment_new_goods.xml
+++ b/app/src/main/res/layout/fragment_new_goods.xml
@@ -5,11 +5,9 @@
     tools:context="cn.ucai.fulicenter.fragment.FragmentNewGoods">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvGoodsList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="新品"
-        android:gravity="center"
-        android:textSize="50dp"/>
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
