--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -1,21 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/ivGoodAvatar"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="200dp"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="12dp"
+    app:cardBackgroundColor="#99f"
+    android:layout_margin="10dp">
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/goods_thumb"/>
-    <TextView
-        android:id="@+id/tvGoodName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <TextView
-        android:id="@+id/tvGoodPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-</LinearLayout>
+        android:orientation="vertical"
+        android:background="#f99"
+        android:layout_margin="10dp"
+        android:id="@+id/layout_goods"
+        android:weightSum="1">
+        <ImageView
+            android:id="@+id/ivGoodAvatar"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:scaleType="fitXY"
+            android:layout_gravity="center"
+            android:src="@drawable/nopic"
+            android:layout_weight="0.42"/>
+        <TextView
+            android:id="@+id/tvGoodName"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/item_good_text"
+            android:textSize="15sp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="3dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:text="商品名称商品名称商品名称商品名称商品名称商品名称商品名称商品名称商品名称商品名称"/>
+        <TextView
+            android:id="@+id/tvGoodPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/item_good_price"
+            android:textSize="13sp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:text="$399.99"/>
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
