在NewGoodsFragment中添加实现下拉刷新和上拉加载的代码

--- a/app/src/main/res/layout/fragment_new_goods.xml
+++ b/app/src/main/res/layout/fragment_new_goods.xml
@@ -16,7 +16,7 @@
                 android:id="@+id/tvRefreshHint"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="下拉刷新.."
+                android:text="刷新中..."
                 android:gravity="center"
                 />
             <android.support.v7.widget.RecyclerView
