--- a/app/src/main/res/layout/fragment_boutique.xml
+++ b/app/src/main/res/layout/fragment_boutique.xml
@@ -1,15 +1,30 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="cn.ucai.fulicenter.fragment.FragmentBoutique">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="精品"
-        android:gravity="center"
-        android:textSize="50dp"/>
-
-</FrameLayout>
+        android:background="@color/list_background">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tvRefreshHint"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="刷新中..."
+                android:textSize="18dp"
+                android:visibility="gone"
+                android:gravity="center_horizontal"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvBoutique"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
