--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,15 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="cn.ucai.fulicenter.fragment.FragmentCategory">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ExpandableListView
+        android:id="@+id/elvCategory"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="分类"
-        android:gravity="center"
-        android:textSize="50dp"/>
-
-</FrameLayout>
+        android:dividerHeight="12dp"
+        android:layout_marginTop="10dp"
+        android:cacheColorHint="@color/list_background"/>
+</LinearLayout>
