--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -15,15 +15,16 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/back"/>
-        <TextView
-            android:id="@+id/tvTitle"
+        <cn.ucai.fulicenter.view.CatChildFilterButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="美妆"
-            android:textSize="25dp"
-            android:gravity="center"
+            android:id="@+id/btnCatChildFilter"
             android:layout_centerInParent="true"
-            />
+            android:background="@null"
+            android:paddingRight="5dp"
+            android:text="小类"
+            android:textSize="20dp"
+            android:drawableRight="@drawable/arrow2_up"/>
     </RelativeLayout>
     <LinearLayout
         android:orientation="horizontal"
