--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,15 +1,44 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="cn.ucai.fulicenter.fragment.FragmentCart">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        >
+        <TextView
+            android:id="@+id/tvSum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/btnBuy"
+            android:layout_marginRight="20dp"
+            android:padding="5dp"
+            android:text="合计：￥998"
+            android:textSize="24dp"/>
+        <TextView
+            android:id="@+id/tvSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/btnBuy"
+            android:layout_below="@id/tvSum"
+            android:layout_marginRight="20dp"
+            android:text="节省：￥120"
+            android:textSize="22dp"/>
+        <Button
+            android:id="@+id/btnBuy"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:text="购买"
+            android:textSize="25dp"
+            android:layout_alignParentRight="true"
+            android:background="@color/main_orange"/>
+    </RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="购物车"
-        android:gravity="center"
-        android:textSize="50dp"/>
-
-</FrameLayout>
+        android:id="@+id/rvCartGoods"/>
+</LinearLayout>
