--- a/app/src/main/res/layout/item_category_child.xml
+++ b/app/src/main/res/layout/item_category_child.xml
@@ -17,15 +17,15 @@
             android:layout_height="50dp"
             android:src="@drawable/nopic"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="30dp"/>
+            android:layout_marginLeft="70dp"/>
         <TextView
             android:id="@+id/tvChildName"
             android:text="鞋子"
-            android:textSize="25dp"
-            android:gravity="center_vertical"
+            android:textSize="20dp"
+            android:layout_marginTop="15dp"
             android:layout_toRightOf="@+id/ivChildThumb"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
