--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -52,6 +52,7 @@
         android:hint="密码"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"
+        android:inputType="textPassword"
         android:drawableRight="@drawable/icon_pwd"
         android:paddingRight="10dp"/>
     <EditText
@@ -61,6 +62,7 @@
         android:layout_marginTop="10dp"
         android:layout_margin="10dp"
         android:hint="确认密码"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"
         android:drawableRight="@drawable/icon_pwd"
