--- a/app/src/main/res/layout/item_cart_goods.xml
+++ b/app/src/main/res/layout/item_cart_goods.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    app:cardCornerRadius="12dp"
+    android:layout_height="90dp"
+    app:cardCornerRadius="8dp"
     android:layout_margin="8dp"
     app:cardBackgroundColor="#d6d1d1">
     <RelativeLayout
@@ -12,8 +12,63 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/nopic"/>
+            android:id="@+id/ivSelect"
+            android:layout_width="25dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
+            android:src="@mipmap/checkbox_normal"/>
+        <ImageView
+            android:id="@+id/ivGoodThumb"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/nopic"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/ivSelect"/>
+        <TextView
+            android:id="@+id/tvCartGoodName"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="收藏商品名称"
+            android:textSize="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/ivGoodThumb"/>
+        <ImageView
+            android:id="@+id/ivAddGood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/add_cart"
+            android:layout_toRightOf="@id/ivGoodThumb"
+            android:layout_below="@id/tvCartGoodName"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"/>
+        <TextView
+            android:id="@+id/tvGoodsCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="22"
+            android:layout_toRightOf="@+id/ivAddGood"
+            android:layout_below="@id/tvCartGoodName"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"/>
+        <ImageView
+            android:id="@+id/ivDeleteGood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/del_cart"
+            android:layout_toRightOf="@+id/tvGoodsCount"
+            android:layout_below="@id/tvCartGoodName"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"/>
+        <TextView
+            android:id="@+id/tvGoodsSum"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="￥998"
+            android:textSize="18dp"
+            android:gravity="center_vertical"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
