--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -4,11 +4,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cn.ucai.fulicenter.fragment.FragmentCart">
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:id="@+id/srl">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tvRefreshHint"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="刷新中...."
+                android:gravity="center"
+                android:textSize="20dp"
+                android:visibility="gone"/>
+            <android.support.v7.widget.RecyclerView
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/rvCartGoods"/>
+        </LinearLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        >
+        android:layout_marginBottom="3dp">
         <TextView
             android:id="@+id/tvSum"
             android:layout_width="wrap_content"
@@ -36,9 +59,4 @@
             android:layout_alignParentRight="true"
             android:background="@color/main_orange"/>
     </RelativeLayout>
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rvCartGoods"/>
 </LinearLayout>
